[tool.poetry]
name = "oedisi-dopf"
version = "0.1.0"
description = ""
authors = ["pnnl"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
helics-apps = "^3.4.0"
helics = "^3.4.0"
pydantic = "1.9"
cvxpy = "^1.5"
pandas = "^2.2.2"
'OpenDSSDirect.py' = "^0.7.0"
oedisi = "^2.0.2"
scikit-learn = "*"
jupyter = "*"
boto3 = "*"
pyarrow = "*"
xarray = "*"
networkx = "*"
matplotlib = "*"
geopy = "*"
plotly = "*"
bokeh = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
