[project]
name = "profilier"
version = "0.1.0"
description = ""
authors = [
    {name = "Tylores",email = "tylor.slay@gmail.com"}
]
readme = "README.md"
dependencies = [
    "tsfel",
    "tensorflow",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "jupyter",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
