[project]
name = "profilier"
version = "0.1.0"
description = ""
authors = [
    {name = "Tylores",email = "tylor.slay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
"pysynthetic"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
